--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('header') %>
+<div>
+  <h1>Welcome to footballers home</h1>
+  <p>In this space, we would be able to see all players and their status in the market</p>
+</div>
+<%- include('footer') %>
