--- a/views/clubs.ejs
+++ b/views/clubs.ejs
@@ -1,5 +1,15 @@
 <%- include('header') %>
 <h1><%= title %></h1>
 <p>These are the number of clubs we have now</p>
-
+<% if(error) { %>
+<p>There was some problem fetching the clubs. Please try again later</p>
+<% } else { %>
+    <ul>
+        <% clubs.forEach(club => { %>
+<li><a href=""><%= club.name %> - <%= club.country %></a></li>
+            <% }) %>
+    </ul>
+ <p>Total Number: <%= clubs.length %></p>
+    <% } %>
+ 
 <%- include('footer') %>
