update page templates

--- a/views/clubs.ejs
+++ b/views/clubs.ejs
@@ -9,7 +9,7 @@
 <li><a href=""><%= club.name %> - <%= club.country %></a></li>
             <% }) %>
     </ul>
- <p>Total Number: <%= clubs.length %></p>
+ <p>Total Number Of Clubs: <%= clubs.length %></p>
     <% } %>
  
 <%- include('footer') %>
