--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,6 +3,8 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/pico.min.css" />
+    <link rel="stylesheet" href="/stylesheets/table.css" />
   </head>
   <body>
     <nav>
@@ -15,4 +17,5 @@
       
       </ul>
     </nav>
+    <div class="container">
   
