--- a/views/players.ejs
+++ b/views/players.ejs
@@ -1,3 +1,74 @@
 <%- include('header') %>
-<h1><%= title %></h1>
+<table role="grid">
+    <caption><%= title %></caption>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Position</th>
+            <th>Club</th>
+            <th>Price</th>
+            <th>For Sale</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Pizza</th>
+            <td>Made with cheese</td>
+            <td>5</td>
+            <td>9.9</td>
+            <td>$5</td>
+        </tr>
+        <tr>
+            <th>Grand spicy chicken</th>
+            <td>Made with chicken</td>
+            <td>8</td>
+            <td>8.7</td>
+            <td>$2</td>
+        </tr>
+        <tr>
+            <th>Nuggets</th>
+            <td>Made of meat</td>
+            <td>8</td>
+            <td>9.2</td>
+            <td>$4</td>
+        </tr>
+        <tr>
+            <th>Lasagne</th>
+            <td>Made of meat and chees</td>
+            <td>7</td>
+            <td>7.4</td>
+            <td>$6</td>
+        </tr>
+        <tr>
+            <th>Waffles</th>
+            <td>Made of Egg</td>
+            <td>6</td>
+            <td>8.0</td>
+            <td>$8</td>
+        </tr>
+        <tr>
+            <th>Beetroot</th>
+            <td>Also called <span class="beta">Beta Vulgaris</span></td>
+            <td>8.4</td>
+            <td>9.3</td>
+            <td>$8.5</td>
+        </tr>
+        <tr>
+            <th>Calamari</th>
+            <td>Optional</td>
+            <td>5</td>
+            <td>5</td>
+            <td>$2</td>
+        </tr>
+        <tr>
+            <th>Prawn Pasta</th>
+            <td>Some memories here. It has to taste good by force 😑</td>
+            <td>10 (<span class="beta"> according to her </span>)</td>
+            <td>5</td>
+            <td>$10.2</td>
+        </tr>
+    </tbody>
+    </table>
+    
 <%- include('footer') %>
