--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,9 +8,11 @@
 
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  text-align: center;
 }
 
+tr > th.error {
+  text-align: center;
+}
 .container {
   padding: 20px;
 }
