--- a/views/players.ejs
+++ b/views/players.ejs
@@ -11,63 +11,27 @@
             <th>For Sale</th>
         </tr>
     </thead>
+    
+
     <tbody>
+        <% if(error) { %>
         <tr>
-            <th>Pizza</th>
-            <td>Made with cheese</td>
-            <td>5</td>
-            <td>9.9</td>
-            <td>$5</td>
+            <th colspan="6" class="error">Sorry Something went wrong </th>
+            
         </tr>
-        <tr>
-            <th>Grand spicy chicken</th>
-            <td>Made with chicken</td>
-            <td>8</td>
-            <td>8.7</td>
-            <td>$2</td>
-        </tr>
-        <tr>
-            <th>Nuggets</th>
-            <td>Made of meat</td>
-            <td>8</td>
-            <td>9.2</td>
-            <td>$4</td>
-        </tr>
-        <tr>
-            <th>Lasagne</th>
-            <td>Made of meat and chees</td>
-            <td>7</td>
-            <td>7.4</td>
-            <td>$6</td>
-        </tr>
-        <tr>
-            <th>Waffles</th>
-            <td>Made of Egg</td>
-            <td>6</td>
-            <td>8.0</td>
-            <td>$8</td>
-        </tr>
-        <tr>
-            <th>Beetroot</th>
-            <td>Also called <span class="beta">Beta Vulgaris</span></td>
-            <td>8.4</td>
-            <td>9.3</td>
-            <td>$8.5</td>
-        </tr>
-        <tr>
-            <th>Calamari</th>
-            <td>Optional</td>
-            <td>5</td>
-            <td>5</td>
-            <td>$2</td>
-        </tr>
-        <tr>
-            <th>Prawn Pasta</th>
-            <td>Some memories here. It has to taste good by force 😑</td>
-            <td>10 (<span class="beta"> according to her </span>)</td>
-            <td>5</td>
-            <td>$10.2</td>
-        </tr>
+        <tr><th colspan="6" class="error"><a href="/players"><button>Reload</button></a></th></tr>
+        <% } else { %>
+            <% players.forEach(player => { %>
+                <tr>
+                    <th><%= player.name %></th>
+                    <td><%= player.age %></td>
+                    <td><%= player.position.name %></td>
+                    <td><%= player.club.name %></td>
+                    <td>€<%= player.price %> million</td>
+                    <td><%= player.forSale? "Yes" : "No" %></td>
+                </tr>
+            <% }) %>
+            <% } %>
     </tbody>
     </table>
     
