--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/pico.min.css" />
     <link rel="stylesheet" href="/stylesheets/table.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <nav>
