--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,9 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-tr > th.error {
+.wrapper {
+  padding: 10px;
   text-align: center;
-}
-.container {
-  padding: 20px;
 }
 
 a {
