--- a/public/stylesheets/table.css
+++ b/public/stylesheets/table.css
@@ -1,10 +1,9 @@
 table {
-  margin: 0 auto;
-}
-
-table {
   border-collapse: collapse;
   border: 2px solid hsl(0, 0%, 68%);
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
 }
 
 td,
@@ -19,6 +18,11 @@ caption {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
+th,
+td {
+  text-align: center;
+}
+
 tr > td:last-of-type,
 tr > th:last-of-type {
   text-align: end;
@@ -28,13 +32,6 @@ tr > th:last-of-type {
     text-align: start;
     padding: 5px;
   }
-}
-
-tr > td:nth-of-type(2),
-tr > th:nth-of-type(3),
-tr > td:nth-of-type(3),
-tr > th:nth-of-type(4) {
-  text-align: center;
 }
 
 tr > th:first-of-type {
