--- a/views/clubs.ejs
+++ b/views/clubs.ejs
@@ -10,6 +10,7 @@
             <% }) %>
     </ul>
  <p>Total Number Of Clubs: <%= clubs.length %></p>
+ <a href="/clubs/create" role="button">Create New Club</a>
     <% } %>
  
 <%- include('footer') %>
