--- a/views/players.ejs
+++ b/views/players.ejs
@@ -1,6 +1,13 @@
 <%- include('header') %>
 <table role="grid">
-    <caption><%= title %></caption>
+    <header class="caption">
+        
+            <h2 class="inline">All Players</h2>
+            <button class="inline">Add Player</button>
+        
+    </header>
+    
+    
     <thead>
         <tr>
             <th>Name</th>
