--- a/public/stylesheets/table.css
+++ b/public/stylesheets/table.css
@@ -4,6 +4,7 @@ table {
   margin: 0 auto;
   width: 100%;
   max-width: 1200px;
+  display: relative;
 }
 
 td,
@@ -12,16 +13,17 @@ th {
   padding: 10px 20px;
 }
 
-caption {
+.caption h2 {
   padding: 10px;
   font-size: 2rem;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  position: relative;
 }
 
-th,
+/* th,
 td {
   text-align: center;
-}
+} */
 
 tr > td:last-of-type,
 tr > th:last-of-type {
