--- a/views/players.ejs
+++ b/views/players.ejs
@@ -3,7 +3,7 @@
     <header class="caption">
         
             <h2 class="inline">All Players</h2>
-            <button class="inline">Add Player</button>
+            <a class="no-underline" href="/players/create"><button class="inline">Add Player</button></a>
         
     </header>
     
