--- a/views/players_create.ejs
+++ b/views/players_create.ejs
@@ -1,29 +1,34 @@
 <%- include('header') %>
 <form>
-    <h2><%= title %></h2>
-        <!-- Grid -->
-        <div class="grid">
-      
-          <!-- Markup example 1: input is inside label -->
-          <label for="firstname">
-            First name
-            <input type="text" id="firstname" name="firstname" placeholder="First name" required>
-          </label>
-      
-          <label for="lastname">
-            Last name
-            <input type="text" id="lastname" name="lastname" placeholder="Last name" required>
-          </label>
-      
-        </div>
-      
-        <!-- Markup example 2: input is after label -->
-        <label for="email">Email address</label>
-        <input type="email" id="email" name="email" placeholder="Email address" required>
-        <small>We'll never share your email with anyone else.</small>
-      
-        <!-- Button -->
-        <button type="submit">Submit</button>
-      
-      </form>
+  <h2><%= title %></h2>
+  <!-- Grid -->
+  <div>
+    <input type="text" name="playername" placeholder="Name. e.g Ronaldo" required>
+    <input type="number" name="age" placeholder="age. e.g 20" required>
+
+    <select>
+      <option value="" disabled selected>Position</option>
+      <% positions.forEach(position => { %>
+      <option value="<%= position.name.toLowerCase() %>"><%= position.name %> (<%= position.abbr %>)</option>
+      <% }) %>
+    </select>
+    <select>
+      <option value="" disabled selected>Club</option>
+      <% clubs.forEach(club => { %>
+      <option value="<%= club.name.toLowerCase() %>"><%= club.name %> </option>
+      <% }) %>
+    </select>
+    <input type="number" name="price" placeholder="Market Value">
+
+    <p>Is This Player For Sale?</p>
+    <input type="radio" id="yes" name="forsale" value="1">
+    <label for="yes">Yes</label>
+    <input type="radio" id="no" name="forsale" value="0" checked>
+    <label for="no">No</label>
+
+  </div>
+  <!-- Button -->
+  <button class="inline" type="submit">Submit</button>
+
+</form>
 <%- include('footer') %>
