--- a/views/clubs_create.ejs
+++ b/views/clubs_create.ejs
@@ -1,7 +1,7 @@
 <%- include('header') %>
 <form>
   <!-- Grid -->
-  <div class="grid">
+  <div>
     <h2><%= title %></h2>
 
     <!-- Markup example 1: input is inside label -->
