add club details page

--- a/views/clubs_detail.ejs
+++ b/views/clubs_detail.ejs
@@ -3,7 +3,7 @@
 
   <h2 class="inline"><%= club.name %> - <%= club.country %></h2>
 
-  <a class="no-underline" href="/players/create"><button class="inline">Add Player</button></a>
+  <a class="no-underline" href="/clubs/<%= club._id %>/create"><button class="inline">Add Player</button></a>
 
 </header>
 <table role="grid">
