--- a/views/clubs_create.ejs
+++ b/views/clubs_create.ejs
@@ -7,13 +7,13 @@
     <!-- Markup example 1: input is inside label -->
     <label for="clubname">
       Club Name
-      <input type="text" id="clubname" name="clubname" placeholder="Club Name" required>
+      <input type="text" id="clubname" name="clubname" placeholder="e.g Manchester United" required>
       <small><%= error %></small>
     </label>
 
     <label for="country">
       Country
-      <input type="text" id="country" name="country" placeholder="Country" required>
+      <input type="text" id="country" name="country" placeholder="e.g England" required>
       <small><%= error %></small>
     </label>
   </div>
