add market page description

--- a/views/market.ejs
+++ b/views/market.ejs
@@ -1,3 +1,4 @@
 <%- include('header') %>
 <h1><%= title %></h1>
+<p>This is where I would display players that are up for sale </p>
 <%- include('footer') %>
