--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <img src="/images/logo.png" alt="My Logo" />
-    <ul>
+    <ul class="sm">
       <li class="menu <%= active == 'home' ? 'active' : '' %>"><a href="/">Home</a></li>
       <li class="menu <%= active == 'clubs' ? 'active' : '' %>"><a href="/clubs">Clubs</a></li>
       <li class="menu <%= active == 'players' ? 'active' : '' %>"><a href="/players">Players</a></li>
