--- a/views/players_detail.ejs
+++ b/views/players_detail.ejs
@@ -7,9 +7,13 @@
 <h2><%= player.name %>, <%= player.age %> <small>- <%= player.club.name %> </small>
 </h2>
 <p>I have been in <a href="/clubs/<%= player.club._id %>"><%= player.club.name %></a> for 10 years. I love being here, getting paid and doing what I love to do</p>
-<div class="grid">
-  <a href="/players/update/<%= player._id %>"><button>Update <%= player.name %> Details</button></a>
-  <a href=""><button>Delete <%= player.name %></button></a>
+
+<a href="/players/update/<%= player._id %>"><button>Update <%= player.name %> Details</button></a>
+<form onsubmit="return confirm(`Do you really want to delete <%= player.name %> from the database? `)" action="/players/delete/<%= player._id %>" method="post">
+  <input type="submit" name="delete" value="Delete <%= player.name %>">
+</form>
+
 </div>
 <% } %>
+<script src="/javascript/playerDetail.js"></script>
 <%- include('footer') %>
