--- a/views/players_update.ejs
+++ b/views/players_update.ejs
@@ -39,7 +39,7 @@
 
   </div>
   <!-- Button -->
-  <button class="inline" type="submit">Submit</button>
+  <button class="inline" type="submit">Update</button>
 
 </form>
 <script src="/javascripts/playerUpdate.js"></script>
