--- a/views/players_create.ejs
+++ b/views/players_create.ejs
@@ -1,35 +1,35 @@
 <%- include('header') %>
-<form>
+<form action="/players/create" method="post">
   <h2><%= title %></h2>
   <!-- Grid -->
   <div>
     <input type="text" name="playername" placeholder="Name. e.g Ronaldo" required>
     <input type="number" name="age" placeholder="age. e.g 20" required>
 
-    <select>
+    <select name="position">
       <option value="" disabled selected>Position</option>
       <% positions.forEach(position => { %>
-      <option value="<%= position.name.toLowerCase() %>"><%= position.name %> (<%= position.abbr %>)</option>
+      <option value="<%= position.abbr %>"><%= position.name %> (<%= position.abbr %>)</option>
       <% }) %>
     </select>
     <% if (Array.isArray(clubs)) { %>
-    <select>
+    <select name="club">
       <option value="" disabled selected>Club</option>
       <% clubs.forEach(club => { %>
-      <option value="<%= club.name.toLowerCase() %>"><%= club.name %> </option>
+      <option value="<%= club.name %>"><%= club.name %> </option>
       <% }) %>
     </select>
     <% } else { %>
-    <select>
-      <option value="" name="<%= clubs.name.toLowerCase() %>" disable selected><%= clubs.name %></option>
+    <select name="club">
+      <option value="<%= clubs.name %>" name="position" disable selected><%= clubs.name %></option>
     </select>
     <% } %>
     <input type="number" name="price" placeholder="Market Value">
 
     <p>Is This Player For Sale?</p>
-    <input type="radio" id="yes" name="forsale" value="1">
+    <input type="radio" id="yes" name="forsale" value=1>
     <label for="yes">Yes</label>
-    <input type="radio" id="no" name="forsale" value="0" checked>
+    <input type="radio" id="no" name="forsale" value=0 checked>
     <label for="no">No</label>
 
   </div>
