refactor: remove market page from view

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,7 +16,7 @@
       <li class="menu <%= active == 'home' ? 'active' : '' %>"><a href="/">Home</a></li>
       <li class="menu <%= active == 'clubs' ? 'active' : '' %>"><a href="/clubs">Clubs</a></li>
       <li class="menu <%= active == 'players' ? 'active' : '' %>"><a href="/players">Players</a></li>
-      <li class="menu <%= active == 'market' ? 'active' : '' %>"><a href="/market">Market</a></li>
+      <!-- <li class="menu <%= active == 'market' ? 'active' : '' %>"><a href="/market">Market</a></li> -->
 
     </ul>
   </nav>
